--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 *{
     margin: 0px;
     padding: 0px;
-    background-color: #b3edff;
+    box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    
 }
 
+body{  
+  
+   height: 175vh;
+    background-image: linear-gradient(45deg, #b3edff 0%  , white 100%);
+}
 
 img{
     width: 100%;
@@ -60,7 +66,9 @@ h2{
    }
 @media(min-width:1000px)
 {
-   
+    body{
+       height: 100vh;
+    }
     h2{
        
        font-size: 30px;
